[package]
name = "boja"
version = "0.2.0"
edition = "2021"
authors = ["Nadir Fejzic <nadirfejzo@gmail.com>"]
description = "A simple command line tool for conversion between color formats."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ariadne = { version = "0.2.0", features = ["auto-color"] }
chumsky = "0.9.2"
clap = { version = "4.3.0", features = ["derive"] }
itertools = "0.10.5"
